feat: add updated subscription service
